--- a/package.json
+++ b/package.json
@@ -5,21 +5,46 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "eject": "expo eject",
-    "test": "node ./node_modules/jest/bin/jest.js --watchAll"
+    "test": "node ./node_modules/jest/bin/jest.js --watchAll",
+    "lint": "eslint components screens navigation constants state helpers"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
     "@expo/samples": "2.1.1",
+    "axios": "^0.18.0",
+    "d3-shape": "^1.3.4",
     "expo": "^32.0.0",
+    "lodash": "^4.17.11",
+    "prop-types": "^15.7.2",
+    "random-seed": "^0.3.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-chart-kit": "^2.2.1",
+    "react-native-elements": "^1.1.0",
+    "react-native-indicators": "^0.13.0",
+    "react-native-snap-carousel": "^3.7.5",
+    "react-native-svg-charts": "^5.2.0",
+    "react-native-vector-icons": "^6.3.0",
     "react-navigation": "^3.0.9",
-    "styled-components": "^4.1.3"
+    "react-redux": "^6.0.1",
+    "redux": "^4.0.1",
+    "redux-axios-middleware": "^4.0.0",
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^4.1.3",
+    "time-ago": "^0.2.1"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
+    "eslint": "^5.14.1",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react-native": "^3.6.0",
+    "eslint-plugin-standard": "^4.0.0",
     "jest-expo": "^32.0.0"
   },
   "private": true
